fix: 规范变量命名
